# dollar-cmd

./: CHANGELOG.md  Cargo.toml  README-ja.md  README.md  mise.toml  rust-toolchain.toml
.github/release-please/: config.json
.github/workflows/: clippy.yaml  release-please.yaml  test.yaml  treefmt.yaml
src/: main.rs
tests/: cli.rs
