[package]
name = "dollar-cmd"
version = "0.0.0"
edition = "2024"
description = "Executes its arguments as a command, so a pasted `$ cmd args` line just works"
repository = "https://github.com/cffnpwr/dollar-cmd"
license = "MIT"

[dependencies]
clap = { version = "=4.6.2", features = ["derive"] }

[dev-dependencies]
rstest = "=0.26.1"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
